# chatgpt-presentation

./: .env.dist  Experimenting with ChatGPT.pptx  README.md  client.py  config.py  pyproject.toml  requirements.txt
.github/workflows/: ruff.yml
src/: app.py  client.py  config.py  utils.py
