[tool.poetry]
name = "chatgpt-presentation"
version = "0.1.0"
description = "A codebase that implements a simple chatbot for presentation purposes."
authors = ["Donatas <donatas.gostautas@gjensidige.no>"]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.3.4"
pydantic-settings = "^2.1.0"
pylint = "^3.0.2"
streamlit = "^1.28.2"
loguru = "^0.7.2"
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 120


[tool.pylint]
[tool.pylint.'MESSAGE-CONTROL']
disable = """
    missing-module-docstring,
    missing-class-docstring,
    missing-function-docstring,
    too-few-public-methods
"""

[tool.pylint.'FORMAT']
min-public-methods = 0
max-line-length = 120
max-args = 6
